# timecard

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/app_services/clock_in/: create_clock_in_app_service.py
api/auth/: auth_api.py  crud.py  db_api.py  schemas.py
api/cruds/: done.py  task.py
api/ddd/application_service/: __init__.py  done_create_application_service.py  task_create_application_service.py  task_list_get_application_service.py  task_update_application_service.py
api/ddd/domain_service/: __init__.py  task_service.py
api/ddd/entity/: __init__.py  i_equatable.py  task.py
api/ddd/repository/: __init__.py  done_repository.py  i_done_repository.py  i_task_repository.py  task_repository.py
api/ddd/value_object/: __init__.py  exception.py  task_id.py  task_title.py
api/domain/models/: i_equatable.py  user.py  user_name.py
api/models/: __init__.py  attendance_record.py  base.py  task.py  user.py
api/routers/: attendance_records.py  clock_in.py  done.py  task.py  user_activity.py  user_attendance_records.py
api/schemas/: attendance_records.py  task.py  user_attendance_records.py
api/utils/: custom_datetime.py
docker/db/initdb.d/: 001_secondary_database.sh
tests/: conftest.py
tests/ddd/entity/: test_task.py
tests/ddd/repository/: test_done_repository.py  test_task_repository.py
tests/ddd/value_object/: test_task_title.py
tests/routes/: test_create_activity.py  test_create_attendance_records.py  test_create_attendance_records_data.py  test_task.py
(+11 files in other folders)
