[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Yhei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
aiomysql = "^0.2.0"
autoflake = "^2.2.1"
poethepoet = "^0.22.1"
isort = "^5.12.0"
sqlalchemy-utils = "^0.41.1"
mypy = "^1.5.1"
pytest = "^7.4.3"
greenlet = "^2.0.2"
python-jose = "^3.4.0"
passlib = "^1.7.4"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
aiosqlite = "^0.19.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
autoflake = "autoflake -r --remove-all-unused-imports --ignore-init-module-imports --remove-unused-variables api/. tests/. --in-place"
isort = "isort api/. tests/."
mypy = "mypy api"
